<resources>
    <string name="app_name">All in One Fitness</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Salir</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesoView">Peso (Kg)</string>
    <string name="repView">Nº repeticiones</string>
    <string name="brzyckiView"><![CDATA[Metodo Brzycki (< 10 rep)]]></string>
    <string name="calcularButton">Calcular</string>
    <string name="wldayView"><![CDATA[Wlday (>10 rep)]]></string>
    <string name="alturaView">Altura (cm)</string>
    <string name="edadView">Edad (años)</string>
    <string name="basalView">Kcal basales</string>
    <string name="sedentarioView">Sedentario</string>
    <string name="ligeroView">Ejercicio liger (1-3 dias/sem)</string>
    <string name="moderadoView">Ejercicio moderado (3-5 dias/sem)</string>
    <string name="fuerteView">Ejercicio fuerte (6-7 dias/sem)</string>
    <string name="ffuerteView">Ejercicio muy fuerte (2 entr/dia fuertes)</string>
    <string name="proteina">Proteina</string>
    <string name="kcal">Kcal</string>
    <string name="grasa">Grasa</string>
    <string name="grProteina">gr/kg</string>
    <string name="grGrasa">gr/kg</string>
    <string name="peso">Peso</string>
    <string name="kg">Kg</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
</resources>
